MDEV-36082 Race condition between log_t::resize_start() and log_t::resize_abort()

log_t::writer_update(): Enable log_writer_resizing only if resize_lsn>1,
to ensure that log_t::resize_abort() will not choose the wrong
log_sys.log_writer.

log_t::resize_start(): Before invoking writer_update(), assign
resize_lsn>1 if applicable, so that the resizing will start correctly.