storage/innobase/include/log0log.h
@@ -303,7 +303,6 @@ public:
   bool log_maybe_unbuffered;
 # endif
 #endif
-
 	/** Fields involved in checkpoints @{ */
 	lsn_t		log_capacity;	/*!< capacity of the log; if
 					the checkpoint age exceeds this, it is
@@ -326,6 +325,8 @@ public:
 	/* @} */
 
 private:
+  /** the thread that initiated resize_lsn() */
+  Atomic_relaxed<void*> resize_initiator;
   /** A lock when the spin-only lock_lsn() is not being used */
   log_lsn_lock lsn_lock;
 public:
@@ -367,11 +368,17 @@ public:
 
   /** Start resizing the log and release the exclusive latch.
   @param size  requested new file_size
+  @param thd   the current thread identifier
   @return whether the resizing was started successfully */
-  resize_start_status resize_start(os_offset_t size) noexcept;
+  resize_start_status resize_start(os_offset_t size, void *thd) noexcept;
 
-  /** Abort any resize_start(). */
-  void resize_abort() noexcept;
+  /** Abort a resize_start() that we started.
+  @param thd  thread identifier that had been passed to resize_start() */
+  void resize_abort(void *thd) noexcept;
+
+  /** @return whether a particular resize_start() is in progress */
+  bool resize_running(void *thd) const noexcept
+  { return thd == resize_initiator; }
 
   /** Replicate a write to the log.
   @param lsn  start LSN
@@ -481,7 +488,7 @@ public:
 
 private:
   /** Update writer and mtr_t::finisher */
-  void writer_update() noexcept;
+  void writer_update(bool resizing) noexcept;
 
   /** Wait in append_prepare() for buffer to become available
   @tparam spin  whether to use the spin-only lock_lsn()
